--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,17 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
+    <dependency>
+     	<groupId>com.framework</groupId>
+  		<artifactId>frameworkutility</artifactId>
+ 		<version>0.0.1-SNAPSHOT</version>
+ 		<exclusions>
+	  			<exclusion>
+    				<groupId>org.slf4j</groupId>
+    				<artifactId>slf4j-api</artifactId>
+				</exclusion>
+	  		</exclusions>
+  </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
