--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,11 @@
 		<dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-actuator</artifactId>
-    </dependency>
+        </dependency>
+        <dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-feign</artifactId>
+		</dependency>
     <dependency>
      	<groupId>com.framework</groupId>
   		<artifactId>frameworkutility</artifactId>
