--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8030
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
+hystrix.command.default.circuitBreaker.requestVolumeThreshold=10
+hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=10000
+hystrix.command.default.circuitBreaker.errorThresholdPercentage=50
