--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
 hystrix.command.default.circuitBreaker.requestVolumeThreshold=10
 hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=10000
 hystrix.command.default.circuitBreaker.errorThresholdPercentage=50
+#metrics.rollingStats.timeInMilliseconds
