added hystrix stream

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ hystrix.command.default.circuitBreaker.requestVolumeThreshold=10
 hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds=10000
 hystrix.command.default.circuitBreaker.errorThresholdPercentage=50
 #metrics.rollingStats.timeInMilliseconds
+spring.application.name=myhystrixclient
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
